[package]
name = "rust_webgl_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
web-sys = { version = "0.3.69", features = ['WebGlRenderingContext',
'WebGlShader',
'WebGlProgram',
'WebGlBuffer',
'HtmlCanvasElement',
'Window',
'Document',
'console',
] }
wasm-bindgen = "0.2.92"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
